fixed bug on mobile

--- a/app/assets/styles/modules/_reveal-item.css
+++ b/app/assets/styles/modules/_reveal-item.css
@@ -1,11 +1,12 @@
 .reveal-item {
   opacity: 0;
   transition: all 1.5s ease-out;
-  transform: scale(1.15);
+  /* transform: scale(1.15);
+  overflow: hidden; */
 
   &--is-visible {
     opacity: 1;
-    transform: scale(1);
+    /* transform: scale(1); */
   }
 }
 
